# Flood-RM

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  how --stat e2e46111  pyproject.toml
artifacts/: data_links.txt  models.txt
artifacts/fragility/: erad_flood_depth_curves.csv
docs/: CONTEXT.md  agent_instructions_seed.md  agent_work_packages.md  clean_code_north_star.md  codebase_map.md  grill_review.md  notebook_backend_trace.md  plumbing_reduction_directive.md  reduction_candidates.md  refactor_roadmap.md
docs/adr/: 0001-coastal-wave-coupling-architecture.md  0002-study-location-intake.md  0003-source-collection-module.md  0004-baseline-sfincs-build-module.md  0005-event-catalog-module.md  0006-single-use-case-test-module.md  0007-location-workspace-interface.md  0008-staged-stochastic-scenario-framework.md  0009-variable-length-physical-scenarios.md  0010-wflow-location-detail-configuration.md  0011-copula-joint-compound-dependence.md  0012-coverage-box-boundary-handoff-domain.md  0013-layered-location-config.md  0014-hydromt-model-recipe-yaml.md  0015-separate-smart-ds-and-onm-export-stages.md  0016-wflow-discharge-generator-and-frequency-amplification.md  0017-austin-regulated-mainstem-boundary-inflow.md  0018-model-yaml-source-of-truth.md  0019-inland-rainfall-peak-timing-and-descriptors.md
docs/agent_reports/: design_events.md  power.md  sfincs_runs.md  shared_infrastructure.md  wflow_runs.md
docs/audit/: file_inventory.json  notebook_backend_trace.json  reduction_candidates.json
docs/design_events/: compass_artifact_wf-b3804321-f2ad-412b-84b7-3c8d1b97cd80_text_markdown.md
docs/power/: power_code_simplification_plan.md  reduction_instructions.md
docs/sfincs_runs/: marshfield_structure_evidence.md
docs/tasks/: 4a.md  4b.md  4c.md  4d.md  4e.md  README.md
locations/austin/: README.md  config.yaml  domain.yaml  grid.yaml  pipeline.py  sfincs.yaml  sfincs_build.yml  sfincs_update_forcing.yml  smartds.yaml  wflow.yaml  wflow_build.yml  wflow_update_forcing.yml
locations/diagnostics/: wflow_sfincs_hydrograph_shape_correlations.csv  wflow_sfincs_hydrograph_shape_summary.csv
locations/greensboro/: README.md  config.yaml  domain.yaml  grid.yaml  pipeline.py  sfincs.yaml  sfincs_build.yml  smartds.yaml  wflow.yaml  wflow_build.yml  wflow_update_forcing.yml
locations/marshfield/: README.md  config.yaml  data_sources.yaml  fiat_config.yml  grid.yaml  pipeline.py  sfincs.yaml  sfincs_build.yml  sfincs_build_waves.yml  sfincs_update_forcing.yml  snapwave.yaml
locations/sfo/: README.md  pipeline.py
scripts/: README.md  get_smartds.py  get_structures.py  onm_export.py  run_pipeline.py
scripts/julia/: dynagrid_smoke.jl  powermodels_onm_smoke.jl
src/: aoi.py  event_forcing.py  event_streamflow.py  generated_artifact.py  location_runtime.py  paths.py  study_location.py
src/collect_sources/: README.md  __init__.py  aorc.py  aorc_event_meteo.py  aorc_sst.py  audit.py  cora.py  era5.py  hurdat2.py  lcra_hydromet.py  meteo.py  national_hydrography.py  nwm.py  rainfall.py  reservoir_conditions.py  source_artifacts.py  ssurgo.py  static.py  stream_geo.py  stream_geo_nldi.py  usgs.py  usgs_streamgages.py  workflow.py
src/coupling/: __init__.py  amplification.py  baseflow.py  contracts.py  discharge.py  domain_geometry.py  domain_manifest.py  domain_set.py  dynamic_handoff.py  handoff_artifacts.py  handoff_sources.py  reviewed_gages.py  wflow_domain_set.py  wflow_gauges.py  wflow_sfincs.py  wflow_sfincs_batch.py  wflow_sfincs_build.py
src/derived/: __init__.py  aorc_event_meteo.py  aorc_sst.py  rainfall.py  reservoir_conditions.py
src/design_events/: README.md  __init__.py  audit.py  audit_metrics.py  build.py  catalog.py  cli.py  coastal.py  config.py  diagnostics.py  driver_records.py  extreme_value.py  handoff.py  inland.py  mixture.py  (+16 more)
src/power_v2/: README.md  __init__.py  pyproject.toml  runtime.py
src/power_v2/nlr_distribution_case/: __init__.py  audit.py  blocks.py  core.py  der.py  impact.py  model.py  onm.py  readiness.py  ssap.py  viz.py
src/sfincs_v2/: MIGRATION.md  README.md  __init__.py  pyproject.toml  runtime.py
src/sfincs_v2/examples/: native_runtime_config.yaml
src/sfincs_v2/sfincs_native_runtime/: __init__.py  audit.py  build.py  cli.py  coastal.py  forcing.py  hydrology.py  io.py  pipeline.py  probability.py  runtime.py  schema.py  snapwave.py  solver.py  sources.py
src/source_collection_v2/: README.md  README_REORG.md  pyproject.toml
src/source_collection_v2/collect_sources/: __init__.py  aorc.py  cora.py  era5.py  hurdat2.py  lcra_hydromet.py  national_hydrography.py  nwm.py  ssurgo.py  stream_geo.py  usgs.py
src/source_collection_v2/design_events/: __init__.py
src/source_collection_v2/design_events/collect_sources/: __init__.py  aorc.py  cora.py  era5.py  hurdat2.py  ssurgo.py  stream_geo.py
src/source_collection_v2/design_events/stochastic_boundary/: gridded.py  rainfall.py
src/source_collection_v2/examples/: minimal_usage.py
src/source_collection_v2/stochastic_boundary/: __init__.py  audit.py  hydrology.py  meteo.py  workflow.py
src/wflow_v2/: README.md  __init__.py  pyproject.toml  rewrite_native_report.json  runtime.py
src/wflow_v2/_smoke/: sfincs_discharge.nc
src/wflow_v2/_smoke/data/sfincs/domains/main/base/gis/: wflow_handoff_sources.geojson
src/wflow_v2/_smoke/data/wflow/: domain_set.yaml
src/wflow_v2/_smoke/data/wflow/domain_set_gauges/: main_sfincs_gauges.geojson
src/wflow_v2/_smoke2/data/sfincs/domains/a/base/gis/: wflow_handoff_sources.geojson
src/wflow_v2/_smoke2/data/wflow/: domain_set.yaml
src/wflow_v2/_smoke2/data/wflow/domain_set_gauges/: d_sfincs_gauges.geojson
src/wflow_v2/examples/: minimal_workflow.py
src/wflow_v2/wflow_boundary/: __init__.py  api.py  build.py  domain.py  event.py  paths.py  qa.py  states.py
src/wflow_v2/wflow_boundary_compat/: __init__.py  catalog.py  hydromt_native.py  legacy.py  output.py  runner.py
tests/: conftest.py  test_architecture_smoke.py  test_fiat_diagnostics.py  test_notebook_consolidation.py  test_run_pipeline.py  test_tide_gauges.py
(+482 files in other folders)
