[project]
name = "flood-rm"
version = "0.1.0"
description = "Flood-RM: flood-resilient microgrid scenario ensemble builder"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "contextily>=1.7.0",
    "dask[array]>=2025.1.0",
    "fsspec>=2025.3.0",
    "gcsfs>=2025.3.0",
    "geopandas>=1.1.3",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "hydromt>=1.3.0,<2",
    "hydromt-sfincs>=2.0.0rc1,<3",
    "infrasys>=1.1.2",
    "intake>=2.0.9",
    "intake-xarray>=2.0.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.4",
    "osmnx>=2.1.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "planetary-computer>=1.0.0",
    "pyarrow>=22.0.0",
    "pyogrio>=0.10.0",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "pynhd>=0.19.0",
    "pyvinecopulib>=0.6.0",
    "pyyaml>=6.0",
    "rasterio>=1.5.0",
    "requests>=2.33.1",
    "rioxarray>=0.22.0",
    "s3fs>=2026.3.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "shapely>=2.1.2",
    "tqdm>=4.60.0",
    "xarray>=2026.2.0",
    "zarr>=3.1.0",
    "cdsapi>=0.7.0",
    "hydromt-wflow>=1.0.2",
    "tomli-w>=1.2.0",
    "utide>=0.3.1",
    "xugrid>=0.15.1",
    "numpy>=2.4.4",
    "pyextremes>=2.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/design_events",
    "src/design_events_v2",
    "src/collect_sources",
    "src/sfincs_runs",
    "src/wflow_runs",
    "src/power",
    "src/fiat_runs",
]
only-include = [
    "src/design_events",
    "src/design_events_v2",
    "src/collect_sources",
    "src/sfincs_runs",
    "src/wflow_runs",
    "src/power",
    "src/fiat_runs",
    "src/study_location.py",
    "src/paths.py",
    "src/aoi.py",
]

[tool.uv]
default-groups = ["power-systems"]
# hydromt-wflow 1.0.1/1.0.2 carry a blanket `rasterio<1.5` cap, but 1.0.2 is the
# release that fixes setup_soilmaps' do_curve_fit under numpy 2.x. hydromt-wflow
# 1.0.0 already runs on rasterio 1.5.0 here and the soilgrids fix is
# rasterio-independent, so we override the over-tight transitive cap.
override-dependencies = ["rasterio>=1.5.0"]

[tool.uv.sources]
nrel-shift = { git = "https://github.com/NLR-Distribution-Suite/shift.git" }

[dependency-groups]
power-systems = [
    "grid-data-models>=2.3.3",   # gdm — distribution grid data models
    "loguru>=0.7.0",              # used by nrel-ditto and directly in notebooks
    "nrel-ditto>=0.1.0",          # OpenDSS writer (DiTTo)
    "nrel-shift>=0.2.0",          # SHIFT synthetic feeder builder (git source above)
    "opendssdirect-py>=0.9.4",    # OpenDSS Python interface for audit notebook
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["-p", "no:cacheprovider"]
