[project]
name = "sfincs-native-runtime"
version = "0.1.0"
description = "Minimal native HydroMT-SFINCS event runtime for inland Wflow discharge and coastal/SnapWave events"
requires-python = ">=3.10"
dependencies = [
  "hydromt-sfincs",
  "geopandas",
  "numpy",
  "pandas",
  "xarray",
  "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
sfincs-native-runtime = "sfincs_native_runtime.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
